# todo-server

./: .dockerignore  .env  .env.example  .eslintrc.js  .gitignore  .prettierrc  Dockerfile  README.md  apollo.config.js  db.sqlite3  docker-compose.yml  ecosystem.config.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.gql  tsconfig.json
.github/workflows/: deploy.yml
authentication/: views.py
frontend/: package.json  vite.config.ts
frontend/src/: App.svelte  main.ts
healthcheck/: urls.py  views.py
src/: index.ts  schema.gql
src/core/classes/: app.ts  controller.ts  index.ts  model.ts  router.ts
src/core/db/: connection.ts  index.ts  options.ts
src/core/decorators/router/: index.ts
src/core/graphql/: index.ts
src/core/interfaces/: enums.ts  index.ts
src/migrations/: 1593407297506-data.ts  1593409090090-data.ts  1595393030896-auto.ts  1595393601811-auto.ts
src/server/: app.ts  middlewares.ts
src/server/controllers/: TaskController.ts  index.ts
src/server/graphql/: index.ts
src/server/graphql/task/: resolvers.ts  types.ts
src/server/middleware/: index.ts
src/server/models/: Task.ts  User.ts  index.ts
src/server/routers/: index.ts  main.ts
static_files/frontend/: index.html
static_files/frontend/assets/: index.js
templates/svelte/: index.html
todo/: settings.py  urls.py  views.py
todos/: models.py  serializers.py  urls.py  views.py
todos/migrations/: 0001_initial.py  0002_alter_todo_order_number.py  0003_todo_status.py  0004_delete_existing_todos.py  0005_todo_user.py
